--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap');
+
+body {
+    font-family: 'Hind Siliguri', sans-serif;
+    font-weight: 400;
+}
+
 #hero-outer {
     height: 600px;
     width: 100%;
