--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,8 @@
 body {
     font-family: 'Hind Siliguri', sans-serif;
     font-weight: 400;
+    background-color: #DBD1C2;
+
 }
 
 #hero-outer {
@@ -19,3 +21,6 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+/* navigation links */
+
