--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap');
 
 body {
@@ -10,8 +9,9 @@ body {
 
 #logo {
     float: left;
-    font-size: 200%;
+    font-size: 280%;
     text-transform: uppercase;
+    
 }
 
 /* navigation links */
@@ -19,9 +19,12 @@ body {
 #nav-menu {
     font-size: 110%;
     letter-spacing: 4px;
+
+
 }
 
-#nav-menu, #logo {
+#nav-menu,
+#logo {
     line-height: 50px;
 }
 
@@ -49,4 +52,3 @@ body {
     background-size: cover;
     background-position: center;
 }
-
