--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
     font-family: 'Hind Siliguri', sans-serif;
     font-weight: 400;
@@ -25,7 +31,7 @@ body {
 
 #nav-menu,
 #logo {
-    line-height: 50px;
+    line-height: 75px;
 }
 
 #nav-menu li {
