--- a/assets/style.css
+++ b/assets/style.css
@@ -78,3 +78,12 @@ h1, h2 {
     background-size: cover;
     background-position: center;
 }
+
+/* our story */
+
+#our-story {
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+}
