--- a/assets/style.css
+++ b/assets/style.css
@@ -89,7 +89,11 @@ h1, h2 {
     width: 400px;
 }
 
-
+#what-is-yoga {
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+}
 
 
 /* footer */
@@ -101,6 +105,7 @@ h1, h2 {
     height: 300px;
     display: flex;
     justify-content: space-evenly;
+    
   }
 
 #footer-section-left {
@@ -121,4 +126,9 @@ h1, h2 {
     width: 100%;
     height: 150px;
   
+}
+
+#social-media {
+    text-decoration: none;
+    color: inherit;
 }
