--- a/assets/style.css
+++ b/assets/style.css
@@ -80,6 +80,22 @@ h1, h2 {
     background-position: center;
 }
 
+#cover-text {
+    font-size: 90%;
+    letter-spacing: 4px;
+    width: 300px;
+    height: 500px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgb(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+    
+    position: absolute;
+
+}
+
 /* our story */
 
 #our-story {
