--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: 'Hind Siliguri', sans-serif;
     font-weight: 400;
-    color: #3a3a3a;
+    color: #000000;
     background-color: #DBD1C2;
 
 }
@@ -20,7 +20,7 @@ body {
 h1, h2 {
     
     text-transform: uppercase;
-    color: #252525;
+    color: #000000;
 }
 
 #logo {
@@ -55,11 +55,11 @@ h1, h2 {
 }
 
 #nav-menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #000000;
 }
 
 .active {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #000000;
 }
 
 /* hero image */
@@ -75,22 +75,22 @@ h1, h2 {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url(../assets/images/pexels-quang-nguyen-vinh-2164026.jpg);
+    background: url(../assets/images/288720524_1405684069929474_4358171265486035848_n.jpg);
     background-size: cover;
     background-position: center;
 }
 
 #cover-text {
     font-size: 90%;
-    letter-spacing: 4px;
     width: 300px;
-    height: 500px;
-    padding-top: 40px;
+    
+    letter-spacing: 2px;
+    
     padding-left: 10px;
-    background-color: rgb(241, 109, 107, .7);
+    background-color: rgb(150, 117, 90);
 
-    bottom: 30px;
-    right: 150px;
+    bottom: 100px;
+    left: 30px;
     
     position: absolute;
 
