--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,7 @@ h1, h2 {
     text-align: center;
     font-size: 280%;
     text-transform: capitalize;
+    margin: 10px;
 }
 
 /* navigation links */
